--- a/.github/workflows/build-deb.yml
+++ b/.github/workflows/build-deb.yml
@@ -16,8 +16,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential pkg-config \
-            libx11-dev libxft-dev libxrender-dev libxinerama-dev \
-            libharfbuzz-dev libfontconfig1-dev libfreetype6-dev dpkg-dev
+            libx11-dev libx11 libxft-dev libxft libxrender-dev libxrender libxinerama-dev libxinerama \
+            libharfbuzz-dev libharfbuzz libfontconfig1-dev libfontconfig1 libfreetype6-dev libfreetype6 dpkg-dev
       - name: Build combined binary (shared)
         run: make STATIC=0
       - name: Build amd64 deb
